--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost&family=Roboto&display=swap");
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
@@ -15,9 +14,8 @@ html {
 }
 
 body {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: white;
   height: auto;
   color: #000;
@@ -39,6 +37,13 @@ body {
 
 .logout {
   float: right;
+  clip-path: polygon(0 0, 100% 0%, 100% 100%, 30% 100%);
+  opacity: .5;
+  transition: 0.3s ease-in-out;
+}
+
+.logout:hover {
+  opacity: 1;
 }
 
 .prof {
@@ -51,11 +56,10 @@ body {
 }
 
 .delete {
-  background-color: rgba(0, 0, 255, 0.1);
-  color: gray;
   padding: 0.1em 0.8em;
-  border-radius: 6px;
   float: right;
+  text-decoration: underline;
+  color: red;
   margin-top: -3.5em;
 }
 
